--- a/vignettes/Package_making.Rmd
+++ b/vignettes/Package_making.Rmd
@@ -63,3 +63,7 @@ usethis::use_vignette("second-vignette")
 ```
 
 Or, go through the RStudio menu File -> New File -> R Markdown -> From Template. Then you select “Package Vignette” from the rmarkdown package, and you will get a vignette template. After changing the title, author, and other metadata of the template, you can start writing the content of your report.
+
+DO NOT JUST KNIT A VIGNETTE USING THE BUTTON
+
+You can build all vignettes from the console with devtools::build_vignettes(), but this is rarely useful. Instead use devtools::build() to create a package bundle with the vignettes included. RStudio’s “Build & reload” does not build vignettes to save time. Similarly, devtools::install_github() (and friends) will not build vignettes by default because they’re time consuming and may require additional packages. You can force building with devtools::install_github(build_vignettes = TRUE). This will also install all suggested packages.
