Readme with hyperlink

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,11 +22,13 @@ The goal of smallpackage is for me to learn how to make packages
 
 ## Installation
 
-This package is not on CRAN:
+This R package is not on CRAN, but you can install and attach it locally:
 
 ``` r
 install.packages("smallpackage")
 ```
+
+What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
 ## Example
 
@@ -37,18 +39,13 @@ library(smallpackage)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+If Github Pages is enabled, by default the Readme.md becomes the homepage.
 
-```{r cars}
-summary(cars)
-```
+Then hyperlinks can be used to get to html files in the 'doc' folder like so:
+
+<https://condatis.github.io/smallpackage/doc/second-vignette.html>
 
 You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
 
-You can also embed plots, for example:
 
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
 
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
